8366147: ZGC: ZPageAllocator::cleanup_failed_commit_single_partition may leak memory